# comm-mcps

./: .env.example  .gitignore  .mcp.json  CLAUDE.md  README.md  cli.py  pyproject.toml  setup.sh
examples/: trading_bot.py
src/comm_mcps/: __init__.py  config.py  server.py
src/comm_mcps/tools/: __init__.py  email.py  signal.py  signal_unified.py  telegram.py  telegram_polling.py  telegram_unified.py  telegram_webhook.py
